[gd_scene load_steps=3 format=3 uid="uid://bv8xxar3n6k8j"]

[ext_resource type="Script" path="res://scenes/Settings.gd" id="1_settings"]
[ext_resource type="FontFile" uid="uid://dbbmlg30b2vus" path="res://assets/fonts/retro.ttf" id="2_retro_font"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_settings")

[node name="Background" type="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.05, 0.2, 1)

[node name="VBoxContainer" type="VBoxContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0

[node name="Title" type="Label"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.5, 1)
theme_override_fonts/font = ExtResource("2_retro_font")
theme_override_font_sizes/font_size = 48
text = "SETTINGS"
horizontal_alignment = 1

[node name="Spacer1" type="Control"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="MasterVolumeLabel" type="Label"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_retro_font")
theme_override_font_sizes/font_size = 24
text = "Master Volume"
horizontal_alignment = 1

[node name="MasterVolumeSlider" type="HSlider"]
layout_mode = 2
min_value = 0.0
max_value = 100.0
step = 1.0
value = 50.0

[node name="MasterVolumeValue" type="Label"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_retro_font")
theme_override_font_sizes/font_size = 18
text = "50%"
horizontal_alignment = 1

[node name="Spacer2" type="Control"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="MusicVolumeLabel" type="Label"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_retro_font")
theme_override_font_sizes/font_size = 24
text = "Music Volume"
horizontal_alignment = 1

[node name="MusicVolumeSlider" type="HSlider"]
layout_mode = 2
min_value = 0.0
max_value = 100.0
step = 1.0
value = 70.0

[node name="MusicVolumeValue" type="Label"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_retro_font")
theme_override_font_sizes/font_size = 18
text = "70%"
horizontal_alignment = 1

[node name="Spacer3" type="Control"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="SFXVolumeLabel" type="Label"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_retro_font")
theme_override_font_sizes/font_size = 24
text = "SFX Volume"
horizontal_alignment = 1

[node name="SFXVolumeSlider" type="HSlider"]
layout_mode = 2
min_value = 0.0
max_value = 100.0
step = 1.0
value = 80.0

[node name="SFXVolumeValue" type="Label"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_retro_font")
theme_override_font_sizes/font_size = 18
text = "80%"
horizontal_alignment = 1

[node name="Spacer4" type="Control"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="BackButton" type="Button"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "BACK"
